[package]
name = "echo"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dependencies]
futures-util = "0.3.31"
grafbase-sdk = { version = "0.6.1", features = ["jq-selection"] }
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.15.1", features = ["v4"] }

[dev-dependencies]
indoc = "2"
insta = { version = "1.42.1", features = ["json"] }
grafbase-sdk = { version = "0.6.1", features = ["test-utils"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
serde_json = "1"
